--- a/etc/SenseEmbed.ipynb
+++ b/etc/SenseEmbed.ipynb
@@ -613,16 +613,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2076ff9c208>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x207721ddf98>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -640,7 +640,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10,10))\n",
+    "fig = plt.figure(figsize=(10,10))\n",
     "ax1 = plt.subplot2grid((2,2), (0,0))\n",
     "ax1.set_aspect('equal')\n",
     "char_data.plot(\"count_c1\", \"count_c2\", 'scatter', ax=ax1)\n",
@@ -654,11 +654,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig('../data/annot_data.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Sense Embed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1098,17 +1114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: '../data/sense_link_data.pkl'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "SENSE_LINK_PATH = \"../data/sense_link_data.pkl\"\n",
     "sense_link_data = []\n",
@@ -1123,33 +1131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29410a93c046486980b9edc4904bae0c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[憂悶]: expected a non-empty list of Tensors\n",
-      "[憂愁]: expected a non-empty list of Tensors\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this block took ~70 seconds in a i7-desktop\n",
     "if RUN_LINKSENSE:\n",
@@ -1166,17 +1150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "sense_link_frame = pd.DataFrame.from_records(sense_link_data, \n",
-    "                columns=[\"lemma\", \"cwn_id_1\", \"sense_def_1\", \"cwn_id_2\", \"sense_def_2\"])"
+    "                columns=[\"lemma\", \"cwn_id_lemma\", \"sense_def_lemma\", \"cwn_id_c2\", \"sense_def_c2\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,17 +1170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "sense_pair_merged = base_frame.merge(sense_link_frame, left_index=True, right_index=True)\n",
+    "sense_pair_merged.rename(columns={\"response\": \"hyper_resp\"}, inplace=True)\n",
     "sense_pair_merged.to_csv(\"../data/sense_pair_merged.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1223,11 +1208,11 @@
        "      <th>c1</th>\n",
        "      <th>c2</th>\n",
        "      <th>statement</th>\n",
-       "      <th>response</th>\n",
-       "      <th>cwn_id_1</th>\n",
-       "      <th>sense_def_1</th>\n",
-       "      <th>cwn_id_2</th>\n",
-       "      <th>sense_def_2</th>\n",
+       "      <th>hyper_resp</th>\n",
+       "      <th>cwn_id_lemma</th>\n",
+       "      <th>sense_def_lemma</th>\n",
+       "      <th>cwn_id_c2</th>\n",
+       "      <th>sense_def_c2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lemma</th>\n",
@@ -1302,24 +1287,24 @@
        "</div>"
       ],
       "text/plain": [
-       "      c1 c2 statement  response  cwn_id_1             sense_def_1  cwn_id_2  \\\n",
-       "lemma                                                                         \n",
-       "一些     一  些  一些 是一種 些         0  05052702         表程度輕微，常接在形容詞之後。  04045802   \n",
-       "一半     一  半  一半 是一種 半         0  03048901                   二分之一。  04081901   \n",
-       "一如     一  如  一如 是一種 如         0  03049701  引介與前述事物有高相似度的後述事物作為譬喻。  03036505   \n",
-       "一定     一  定  一定 是一種 定         1  05052501           表對推論的肯定，沒有例外。  09254101   \n",
-       "一律     一  律  一律 是一種 律         0  04032901        表後述的條件適用全體，沒有例外。  09047003   \n",
+       "      c1 c2 statement  hyper_resp cwn_id_lemma         sense_def_lemma  \\\n",
+       "lemma                                                                    \n",
+       "一些     一  些  一些 是一種 些           0     05052702         表程度輕微，常接在形容詞之後。   \n",
+       "一半     一  半  一半 是一種 半           0     03048901                   二分之一。   \n",
+       "一如     一  如  一如 是一種 如           0     03049701  引介與前述事物有高相似度的後述事物作為譬喻。   \n",
+       "一定     一  定  一定 是一種 定           1     05052501           表對推論的肯定，沒有例外。   \n",
+       "一律     一  律  一律 是一種 律           0     04032901        表後述的條件適用全體，沒有例外。   \n",
        "\n",
-       "               sense_def_2  \n",
-       "lemma                       \n",
-       "一些         表程度輕微，常接在形容詞之後。  \n",
-       "一半                整體的二分之一。  \n",
-       "一如                表譬喻事件情況。  \n",
-       "一定           表對推論的肯定，沒有例外。  \n",
-       "一律     由立法機關制定，有強制效力的行為規範。  "
+       "      cwn_id_c2         sense_def_c2  \n",
+       "lemma                                 \n",
+       "一些     04045802      表程度輕微，常接在形容詞之後。  \n",
+       "一半     04081901             整體的二分之一。  \n",
+       "一如     03036505             表譬喻事件情況。  \n",
+       "一定     09254101        表對推論的肯定，沒有例外。  \n",
+       "一律     09047003  由立法機關制定，有強制效力的行為規範。  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,6 +1312,58 @@
    "source": [
     "sense_pair_merged.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make annotation copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annot_senses_pairs = sense_pair_merged.drop('statement', axis=1)\n",
+    "annot_senses_pairs = annot_senses_pairs.loc[annot_senses_pairs.hyper_resp==1, :]\n",
+    "annot_senses_pairs.reset_index(\"lemma\", inplace=True)\n",
+    "annot_senses_pairs.rename_axis(\"serial\", inplace=True)\n",
+    "annot_senses_pairs = annot_senses_pairs.assign(link_check=None, annot_cwn_id_lemma=None, annot_cwn_id_c2=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "annot_senses_pairs.shape: (703, 11)\n",
+      "repl_x.shape: (235, 11)\n",
+      "repl_x.shape: (234, 11)\n",
+      "repl_x.shape: (234, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"annot_senses_pairs.shape: {annot_senses_pairs.shape}\")\n",
+    "for mod_x in range(0, 3):\n",
+    "    idx = [i for i in range(annot_senses_pairs.shape[0]) if i % 3 == mod_x]\n",
+    "    repl_x = annot_senses_pairs.iloc[idx]\n",
+    "    repl_x.to_csv(f\"../data/annot_sense_linkage/annot_sense_linkage_v{mod_x+1}.csv\")\n",
+    "    print(f\"repl_x.shape: {repl_x.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
