add annot_word_struct generated by PosHeuristics.ipynb

--- a/etc/PosHeuristics.ipynb
+++ b/etc/PosHeuristics.ipynb
@@ -23,16 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from GWA2019 import word_pos_utils as word_pos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,54 +41,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# query_word_pos test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'pos': 'N',\n",
-       "  'definition': '由各種線條、形狀、色彩等描繪成的形象或畫面。',\n",
-       "  'example': ['如：「地圖」、「設計圖」、「插圖」、「草圖」。'],\n",
-       "  'quote': []},\n",
-       " {'pos': 'N',\n",
-       "  'definition': '疆域。',\n",
-       "  'example': ['如：「版圖」。'],\n",
-       "  'quote': ['唐．杜甫〈秦州雜詩〉二○首之三：「州圖領同谷，驛道出流沙。」']},\n",
-       " {'pos': 'N',\n",
-       "  'definition': '欲念。',\n",
-       "  'example': [],\n",
-       "  'quote': ['《文選．陸機．五等論》：「故彊晉收其請隧之圖，暴楚頓觀鼎之志。」',\n",
-       "   '唐．杜甫〈過南嶽入洞庭湖〉詩：「帝子留遺恨，曹公屈壯圖。」']},\n",
-       " {'pos': 'V',\n",
-       "  'definition': '繪畫、描繪。',\n",
-       "  'example': [],\n",
-       "  'quote': ['《南史．卷八．梁元帝本紀》：「自圖宣尼像，為之贊而書之。」',\n",
-       "   '《西遊記．第三二回》：「我記得他的模樣，曾將他師徒畫了一個影，圖了一個形，你可拿去。」']},\n",
-       " {'pos': 'V',\n",
-       "  'definition': '策劃、考慮。',\n",
-       "  'example': ['如：「圖謀」。'],\n",
-       "  'quote': ['《史記．卷八六．刺客傳．曹沬傳》：「今魯城壞，即壓齊境，君其圖之！」',\n",
-       "   '宋．曾鞏〈宜黃縣學記〉：「天子圖當世之務，而以學為先，於是天下之學乃得立。」']},\n",
-       " {'pos': 'V',\n",
-       "  'definition': '謀取、謀求。',\n",
-       "  'example': ['如：「貪圖」、「唯利是圖」。'],\n",
-       "  'quote': ['《戰國策．秦策四》：「韓、魏從，而天下可圖也。」', '《紅樓夢．第七○回》：「放風箏圖的是這一樂，所以又說放晦氣。」']}]"
+       "['N', 'V']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "moe_inst.query_senses(\"圖\")"
+    "word_pos.query_word_pos(\"心跳\", moe_inst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +78,7 @@
        "['V', 'N']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,10 +89,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['V', 'V']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_pos.query_word_pos(\"衝撞\", moe_inst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['N', 'N']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_pos.query_word_pos(\"風景\", moe_inst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# apply the heuristics to word pair data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hyper_pairs = pd.read_csv(\"../data/merged_checked.csv\")\n",
+    "hyper_pairs.drop(\"statement\", axis = 1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query_word_pos_wrapper(x):\n",
+    "    ret = word_pos.query_word_pos(x, moe_inst)\n",
+    "    if any([x is None for x in ret]):\n",
+    "        return \"--\"\n",
+    "    else:\n",
+    "        return \"\".join(ret)\n",
+    "hyper_pairs[\"struct\"] = hyper_pairs.lemma.apply(query_word_pos_wrapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_struct = hyper_pairs.iloc[:,[4,0,1,2,3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['N', None]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_pos.query_word_pos(\"一些\", moe_inst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_struct.to_csv(\"../data/annot_word_struct/word_struct.csv\")\n",
+    "## add a copy used to annotate\n",
+    "word_struct.to_csv(\"../data/annot_word_struct/annot_word_struct.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_word_struct = word_struct[[\"struct\", \"response\"]].groupby([\"struct\", \"response\"]).size()\n",
+    "stat_word_struct = stat_word_struct.reset_index().pivot(index=\"struct\", columns=\"response\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_word_struct.columns = stat_word_struct.columns.droplevel(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_word_struct[\"sum\"] = stat_word_struct.sum(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>response</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>prop</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>struct</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>--</th>\n",
+       "      <td>204</td>\n",
+       "      <td>118</td>\n",
+       "      <td>322</td>\n",
+       "      <td>0.366460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NN</th>\n",
+       "      <td>427</td>\n",
+       "      <td>311</td>\n",
+       "      <td>738</td>\n",
+       "      <td>0.421409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NV</th>\n",
+       "      <td>153</td>\n",
+       "      <td>94</td>\n",
+       "      <td>247</td>\n",
+       "      <td>0.380567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VN</th>\n",
+       "      <td>203</td>\n",
+       "      <td>100</td>\n",
+       "      <td>303</td>\n",
+       "      <td>0.330033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VV</th>\n",
+       "      <td>123</td>\n",
+       "      <td>82</td>\n",
+       "      <td>205</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "response    0    1  sum      prop\n",
+       "struct                           \n",
+       "--        204  118  322  0.366460\n",
+       "NN        427  311  738  0.421409\n",
+       "NV        153   94  247  0.380567\n",
+       "VN        203  100  303  0.330033\n",
+       "VV        123   82  205  0.400000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat_word_struct[\"prop\"] = stat_word_struct.iloc[:,1] / stat_word_struct[\"sum\"]\n",
+    "stat_word_struct"
+   ]
   }
  ],
  "metadata": {
@@ -129,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
